# silica

./: Cargo.toml  README.md
silica-asset/: Cargo.toml
silica-asset/src/: image.rs  lib.rs  serde_util.rs
silica-color/: Cargo.toml
silica-color/src/: lib.rs
silica-env/: Cargo.toml
silica-env/src/: lib.rs
silica-game/: Cargo.toml
silica-game/examples/: error.rs  wasd.rs
silica-game/examples/assets/theme/: config.yaml
silica-game/src/: error.rs  image.rs  lib.rs  locale.rs  particles.rs  texture.rs  util.rs
silica-game/src/world2d/: mod.rs  shader.wgsl
silica-gui/: Cargo.toml
silica-gui-macros/: Cargo.toml
silica-gui-macros/src/: lib.rs
silica-gui/src/: lib.rs  render.rs  shader.wgsl  theme.rs  widget.rs
silica-gui/src/widget/: button.rs  label.rs  mod.rs  slider.rs
silica-layout/: Cargo.toml
silica-layout/src/: layout.rs  lib.rs
silica-wgpu/: Cargo.toml
silica-wgpu/src/: batcher.rs  draw.rs  lib.rs  texture.rs
silica-window/: Cargo.toml
silica-window/examples/: gallery.rs  ipsum.txt  text.rs  theme.data
silica-window/src/: gui.rs  lib.rs
theme/: button_colors.txt
theme/dark_theme/: config.yaml
theme/light_theme/: config.yaml
