[package]
name = "silica-game"
version = "0.3.0"
edition = "2024"

[dependencies]
silica-env = { path = "../silica-env" }
silica-gui = { path = "../silica-gui" }
silica-wgpu = { path = "../silica-wgpu" }
silica-window = { path = "../silica-window" }
log = "0.4"
bytemuck = "1.23"
serde = { version = "1.0", features = ["derive"] }
euclid = { version = "0.22", features = ["bytemuck", "serde"] }

png = "0.17"
etagere = "0.2"
unic-langid = "0.9"
fluent-bundle = "0.16"
